--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,15 @@
+{
+  "version": 2,
+  "functions": {
+    "api/lookup.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "routes": [
+    {
+      "src": "/lookup",
+      "dest": "/api/lookup.js"
+    }
+  ]
+}
 
